--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,9 @@
-#   _                                __ 
+#   _                                __
 #  | |_ _ __ _  ___ __  __ ___ _ _  / _|
 #  |  _| '  \ || \ \ /_/ _/ _ \ ' \|  _|
-# (_)__|_|_|_\_,_/_\_(_)__\___/_||_|_|                                        
+# (_)__|_|_|_\_,_/_\_(_)__\___/_||_|_|
+
+set -g default-terminal "xterm-256color"
 
 # Change prefix from 'Ctrl+B' to 'Ctrl+A'
 unbind C-b
